# natural-computing

./: Cargo.toml  LICENSE  README.md
.github/workflows/: clippy.yml  release.yml
act-cpm-ui/: Cargo.toml
act-cpm-ui/src/: act_cpm.rs  cli.rs  main.rs
boids/: Cargo.toml
boids-ui/: Cargo.toml
boids-ui/src/: cli.rs  main.rs  ui.rs
boids/src/: boid.rs  lib.rs  world.rs
ca-ui/: Cargo.toml
ca-ui/src/: cli.rs  game_of_life.rs  game_of_life_bitvec.rs  game_of_life_imgref.rs  main.rs
cellular-automata/: Cargo.toml
cellular-automata/src/: game_of_life.rs  grow.rs  lib.rs  sir.rs  world.rs
cellular-automata/src/ca/: game_of_life.rs  grow.rs  mod.rs  sir.rs
cellular-automata/src/cpm/: act.rs  adhesion.rs  cell_perimeters.rs  cell_volumes.rs  mod.rs  perimeter.rs  volume.rs
cellular-potts-models/: Cargo.toml
cellular-potts-models/src/: act.rs  adhesion.rs  cell_perimeters.rs  cell_volumes.rs  lib.rs  volume.rs
cpm/: Cargo.toml
cpm/src/: act.rs  adhesion.rs  cell_perimeters.rs  cell_volumes.rs  example.rs  lib.rs  perimeter.rs  volume.rs
word-games/: Cargo.toml  README.md
word-games/src/: common.rs  main.rs  word_list.rs  wordle.rs
word-games/word-peaks/: dictionary.txt  targets.txt
