[package]
name = "boids-ui"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boids = { path = "../boids" }
clap = { version = "4.5.3", features = ["derive"] }
pixels = "0.13"
png = "0.17.13"
winit = { version = "0.29", features = ["rwh_05"] }
