[package]
name = "ca-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cellular-automata = { path = "../cellular-automata" }
cpm = { path = "../cpm" }
pixels = "0.13"
winit = { version = "0.29", features = ["rwh_05"] }
rand = "0.8.5"
clap = { version = "4.5.1", features = ["derive"] }
